Changes for 2.2.8rc1

New features:

Bug fixes:
..F....... [ZBX-8232] fixed performance issues in maps (Ivo)
........S. [ZBX-8948] fixed memory leak when checking Template condition during action processing (wiper)
........S. [ZBX-6353] improved history cache performance when it's flooded with data from less than 1000 items (wiper)

--------------------------------------------------------------------------------
Changes for 2.2.7

New features:
A.F....... [ZBX-1357] updated Polish and Spanish translations; thanks to Zabbix translators (Richlv)

--------------------------------------------------------------------------------
Changes for 2.2.7rc2

Bug fixes:
.......PS. [ZBX-8916] fixed "lastlogsize" not being updated in the configuration cache when values are received from the agent (asaveljevs, Sasha)

--------------------------------------------------------------------------------
Changes for 2.2.7rc1

New features:
.......PS. [ZBXNEXT-2478] added configuration file option to disable SNMP bulk requests (wiper)
...G...... [ZBX-8503] increased limitation of command length for remote commands with agent (Sasha)
A.F....... [ZBX-1357] updated Chinese (Taiwan), Italian and Polish translations; thanks to Zabbix translators (Richlv)

Bug fixes:
..F....... [ZBX-8877] fixed filters not hiding/showing for IE11 (Krists)
....I..... [ZBX-8885] fixed building of Zabbix daemons with IBM DB2 support on systems with newer gcc compilers (Sasha, wiper)
....I..... [ZBX-8072] fixed bug when long messages were not truncated to 2KB when inserting into alerts table on DB2 databases (wiper)
A......... [ZBX-6174] fixed "skipDependent" option in trigger.get API call to correctly handle cases when triggers on which they depend are disabled (Krists)
..F....... [ZBX-8887] fixed error messages when saving graph with invalid width and height (Sasha)
....I..... [ZBX-5561] fixed configuration failure during cross compilation; thanks to Christof Lauber for the patch (igors)